nsq/ingress-tcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: nsq
spec:
  entryPoints:
    - nsqd
    - nsqlookupd
    - nsqadmin
  routes:
    - match: HostSNI(`*`)
      services:
        - name: nsq-nsqd
          port: 4150
        - name: nsq-nsqlookupd
          port: 4161
        - name: nsq-nsqadmin
          port: 4171
