nsq/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nsq
spec:
  entryPoints:
    - nsqlookupd
    - nsqadmin
  routes:
    - match: Host(`nsq-lookupd.localhost`)
      kind: Rule
      services:
        - name: nsq-nsqlookupd
          port: 4161
    - match: Host(`nsq-admin.localhost`)
      kind: Rule
      services:
        - name: nsq-nsqadmin
          port: 4171
